Erweitere Download-Skripte um Unterstützung für Unterverzeichnisse und Archive

--- a/env.example
+++ b/env.example
@@ -21,5 +21,12 @@ AUTH_TYPE=oauth2
 MAX_EMAILS=100
 DAYS_BACK=30
 
+# Ordner und Archive (true/false)
+INCLUDE_FOLDERS=true
+INCLUDE_ARCHIVE=true
+
+# Spezifische Ordner (kommagetrennt, leer für alle)
+FOLDER_NAMES=Wichtig,Projekte,Newsletter
+
 # Verzeichnis für gespeicherte E-Mails
 MAIL_DIR=mails 
