Implementiere Chunk-basiertes Laden für alle E-Mails mit verbesserter Performance

--- a/env.example
+++ b/env.example
@@ -21,6 +21,10 @@ AUTH_TYPE=oauth2
 MAX_EMAILS=100
 DAYS_BACK=30
 
+# Chunk-basiertes Laden (für große E-Mail-Mengen)
+CHUNK_SIZE=50
+LOAD_ALL_EMAILS=true
+
 # Ordner und Archive (true/false)
 INCLUDE_FOLDERS=true
 INCLUDE_ARCHIVE=true
