Entferne 1000-E-Mail-Limit und mache es konfigurierbar

--- a/env.example
+++ b/env.example
@@ -24,6 +24,7 @@ DAYS_BACK=30
 # Chunk-basiertes Laden (für große E-Mail-Mengen)
 CHUNK_SIZE=50
 LOAD_ALL_EMAILS=true
+MAX_EMAILS_PER_FOLDER=0
 
 # Ordner und Archive (true/false)
 INCLUDE_FOLDERS=true
