--- a/mailhandler/env.example
+++ b/mailhandler/env.example
@@ -1,37 +1,17 @@
-# E-Mail Konfiguration
+# Beispiel für .env (nur Microsoft Graph API)
+
 EMAIL_ADDRESS=deine.email@domain.com
-EMAIL_PASSWORD=dein_passwort_oder_app_token
-
-# OAuth2 Konfiguration (für moderne M365-Konten)
-CLIENT_ID=deine_client_id
-CLIENT_SECRET=dein_client_secret
-TENANT_ID=dein_tenant_id
-
-# Server-Konfiguration
+AZURE_CLIENT_ID=deine_client_id
+AZURE_TENANT_ID=dein_tenant_id
+AZURE_CLIENT_SECRET=dein_client_secret
 EMAIL_SERVER=outlook.office365.com
-EMAIL_PORT=587
 
-# Verbindungstyp (true für EWS, false für POP3)
-USE_EWS=true
-
-# Authentifizierungstyp (oauth2 für moderne M365, basic für ältere Konten)
-AUTH_TYPE=oauth2
-
-# Download-Einstellungen
-MAX_EMAILS=100
-DAYS_BACK=30
+# Optionale Einstellungen für Ordner und Archive
+INCLUDE_FOLDERS=true
+INCLUDE_ARCHIVE=true
+FOLDER_NAMES=Wichtig,Projekte,Newsletter
 
 # Chunk-basiertes Laden (für große E-Mail-Mengen)
 CHUNK_SIZE=50
 LOAD_ALL_EMAILS=true
-MAX_EMAILS_PER_FOLDER=0
-
-# Ordner und Archive (true/false)
-INCLUDE_FOLDERS=true
-INCLUDE_ARCHIVE=true
-
-# Spezifische Ordner (kommagetrennt, leer für alle)
-FOLDER_NAMES=Wichtig,Projekte,Newsletter
-
-# Verzeichnis für gespeicherte E-Mails
-MAIL_DIR=mails 
+MAX_EMAILS_PER_FOLDER=0 
